# depth_clustering

./: .clang-format  .gitignore  .qglviewer.xml  CMakeLists.txt  package.xml  readme.md  test.yml
config/clusterer/: default.yaml  husky_2d.yaml  imr_3d.yaml  test.yaml  vlp16.yaml
config/for_imr/: husky_2d.yaml  husky_2d_home.yaml  imr_3d.yaml
config/projection/: default.cfg  default.yaml  hdl64.cfg  hdl64.yaml  husky.cfg  imr.cfg  vlp16.cfg
examples/ros_nodes/: CMakeLists.txt  show_objects_moosmann_ros.cpp  show_objects_mossmann_ros.cpp  show_objects_node.1.cpp  show_objects_node.cpp  show_objects_node_ros.cpp
examples/simple_nodes/: show_objects_moosmann.cpp
launch/: 2d_depth_clustering.launch  depth_clusterer.launch  husky_2d_file.launch  husky_2d_file_imr.launch  imr.launch  test.launch  vlp16.launch
src/: CMakeLists.txt  depth_clusterer.cpp  depth_clusterer_.cpp
src/clusterers/: euclidean_clusterer.h  image_based_clusterer.1.h  image_based_clusterer.h
src/communication/: abstract_sender.h
src/eval/: CMakeLists.txt  hand_labeling.1.cpp  hand_labeling.cpp  speed_test.cpp  topic_hz_listener.cpp
src/ground_removal/: CMakeLists.txt  abstract_ground_remover.h  depth_ground_remover.cpp  depth_ground_remover.h  tunnel_ground_removar.cpp  tunnel_ground_remover.cpp  tunnel_ground_remover.h
src/image_labelers/: linear_image_directed_labeler.h  linear_image_labeler.h
src/image_labelers/diff_helpers/: diff_factory.h  ground_diff.h
src/projections/: projection_params.cpp  projection_params.h
src/ros_bridge/: CMakeLists.txt  cloud_odom_ros_subscriber.cpp  cloud_odom_ros_subscriber.h  depth_image_publisher.cpp  image_odom_ros_subscriber.1.cpp  image_odom_ros_subscriber.1.h  image_ros_subscriber.cpp  image_ros_subscriber.h  laser_ros_subscriber.cpp  laser_ros_subscriber.h  objects_publisher.cpp  objects_publisher.h  ros_cloud_publisher.cpp  ros_cloud_publisher.h  ros_visualizer.cpp  ros_visualizer.h
src/utils/: CMakeLists.txt  cloud.cpp  cloud.h  folder_reader.cpp  init_from_ros_param.h  oriented_bounding_box.cpp  oriented_bounding_box.h  oriented_bounding_box.hpp  savitsky_golay_smoothing.cpp  savitsky_golay_smoothing.h  velodyne_utils.cpp  velodyne_utils.h
src/visualization/: CMakeLists.txt  visualizer.cpp  visualizer.h  visualizer_ros.cpp  visualizer_ros.h
test/: CMakeLists.txt  test_savitsky_golay_smoothing.cpp
